Fixing account view

--- a/Front End/app/src/main/res/layout/activity_main3.xml
+++ b/Front End/app/src/main/res/layout/activity_main3.xml
@@ -8,29 +8,14 @@
     tools:context=".MainActivity3">
 
     <ImageView
-        android:id="@+id/imageView3"
+        android:id="@+id/imageView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.0"
-        app:srcCompat="@drawable/feed" />
-
-    <TextView
-        android:id="@+id/view_user"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textColor="#FFF1F3FF"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.144"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.022" />
+        app:srcCompat="@drawable/feed2" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/addTweet"
@@ -39,23 +24,35 @@
         android:clickable="true"
         android:onClick="addTweet"
         app:backgroundTint="#F1F3FF"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.954"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.096"
-        app:srcCompat="@drawable/addicon" />
+        app:srcCompat="@drawable/addicon"
+        tools:layout_editor_absoluteX="339dp"
+        tools:layout_editor_absoluteY="59dp" />
 
     <TextView
         android:id="@+id/response"
-        android:layout_width="382dp"
-        android:layout_height="580dp"
+        android:layout_width="383dp"
+        android:layout_height="490dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.444"
+        app:layout_constraintHorizontal_bias="0.428"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="1.0" />
+        app:layout_constraintVertical_bias="0.605" />
+
+    <TextView
+        android:id="@+id/settings"
+        android:layout_width="48dp"
+        android:layout_height="53dp"
+        android:onClick="goSettings"
+        tools:layout_editor_absoluteX="42dp"
+        tools:layout_editor_absoluteY="662dp" />
+
+    <TextView
+        android:id="@+id/account"
+        android:layout_width="52dp"
+        android:layout_height="48dp"
+        android:onClick="goAccount"
+        tools:layout_editor_absoluteX="319dp"
+        tools:layout_editor_absoluteY="666dp" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
