Linking register and testing

--- a/Front End/app/src/main/res/layout/activity_main2.xml
+++ b/Front End/app/src/main/res/layout/activity_main2.xml
@@ -39,7 +39,10 @@
         android:ems="10"
         android:hint="First Name"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
         android:textColorHint="#C5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -54,7 +57,10 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
         android:textColorHint="#FFC5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -69,7 +75,10 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
         android:textColorHint="#FFC5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -84,6 +93,8 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
         android:textColorHint="#FFC5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -99,7 +110,10 @@
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
         android:textColorHint="#FFC5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
