--- a/Front End/app/src/main/res/layout/activity_main5.xml
+++ b/Front End/app/src/main/res/layout/activity_main5.xml
@@ -23,6 +23,10 @@
         android:ems="10"
         android:hint="First Name"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
+        android:textColorHint="#C5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -37,6 +41,9 @@
         android:ems="10"
         android:hint="Last Name"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
+        android:textColorHint="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -51,6 +58,10 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
+        android:textColorHint="#C5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -65,6 +76,10 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
+        android:textColorHint="#C5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -79,6 +94,10 @@
         android:ems="10"
         android:hint="Confirm Password"
         android:inputType="textPassword"
+        android:textColor="#000000"
+        android:textColorHighlight="#C5C5C5"
+        android:textColorHint="#C5C5C5"
+        android:textColorLink="#C5C5C5"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
