--- a/Front End/app/src/main/res/layout/activity_main1.xml
+++ b/Front End/app/src/main/res/layout/activity_main1.xml
@@ -25,7 +25,10 @@
         android:ems="10"
         android:hint="Username"
         android:inputType="textPersonName"
+        android:textColor="@color/black"
+        android:textColorHighlight="#FFC5C5C5"
         android:textColorHint="#FFC5C5C5"
+        android:textColorLink="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
@@ -40,7 +43,10 @@
         android:ems="10"
         android:hint="Password"
         android:inputType="textPassword"
+        android:textColor="#000000"
+        android:textColorHighlight="#FFC5C5C5"
         android:textColorHint="#FFC5C5C5"
+        android:textColorLink="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.497"
