--- a/Front End/app/src/main/res/layout/activity_main5.xml
+++ b/Front End/app/src/main/res/layout/activity_main5.xml
@@ -110,22 +110,33 @@
         android:layout_width="34dp"
         android:layout_height="32dp"
         android:onClick="logout"
-        tools:layout_editor_absoluteX="338dp"
-        tools:layout_editor_absoluteY="544dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.896"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.772" />
 
     <TextView
         android:id="@+id/textView3"
         android:layout_width="61dp"
         android:layout_height="49dp"
         android:onClick="goHome"
-        tools:layout_editor_absoluteX="176dp"
-        tools:layout_editor_absoluteY="667dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.976" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="49dp"
         android:layout_height="53dp"
         android:onClick="goAccount"
-        tools:layout_editor_absoluteX="320dp"
-        tools:layout_editor_absoluteY="661dp" />
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.892"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.982" />
 </androidx.constraintlayout.widget.ConstraintLayout>
