--- a/Front End/app/src/main/res/layout/tweet.xml
+++ b/Front End/app/src/main/res/layout/tweet.xml
@@ -1,7 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
 
     <RelativeLayout
         android:layout_width="match_parent"
@@ -9,7 +10,7 @@
         android:padding="10dp">
 
         <TextView
-            android:id="@+id/textView7"
+            android:id="@+id/showUsername"
             android:layout_width="402dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
@@ -22,9 +23,9 @@
             android:textSize="16dp" />
 
         <TextView
-            android:id="@+id/textView8"
+            android:id="@+id/showTweet"
             android:layout_width="402dp"
-            android:layout_height="86dp"
+            android:layout_height="67dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
             android:layout_marginStart="0dp"
@@ -34,14 +35,5 @@
             android:textSize="20sp"
             android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_alignParentStart="true"
-            android:layout_alignParentTop="true"
-            android:layout_marginStart="184dp"
-            android:layout_marginTop="119dp" />
-
     </RelativeLayout>
-
 </LinearLayout>
