--- a/Front End/app/src/main/res/layout/tweet.xml
+++ b/Front End/app/src/main/res/layout/tweet.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:orientation="vertical">
@@ -11,29 +12,55 @@
 
         <TextView
             android:id="@+id/showUsername"
-            android:layout_width="402dp"
+            android:layout_width="289dp"
             android:layout_height="wrap_content"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="0dp"
+            android:layout_marginStart="15dp"
+            android:layout_marginTop="9dp"
             android:fontFamily="sans-serif-light"
             android:text="Username"
             android:textColor="#989898"
-            android:textSize="16dp" />
+            android:textSize="18dp" />
 
         <TextView
             android:id="@+id/showTweet"
-            android:layout_width="402dp"
-            android:layout_height="67dp"
+            android:layout_width="304dp"
+            android:layout_height="96dp"
             android:layout_alignParentStart="true"
             android:layout_alignParentTop="true"
-            android:layout_marginStart="0dp"
-            android:layout_marginTop="33dp"
+            android:layout_marginStart="17dp"
+            android:layout_marginTop="47dp"
             android:fontFamily="sans-serif-condensed-light"
             android:text="Tweet"
             android:textSize="20sp"
             android:textStyle="bold" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/floatingActionButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="79dp"
+            android:layout_marginEnd="14dp"
+            android:clickable="true"
+            android:onClick="addingTweet"
+            app:backgroundTint="#FFFFFF"
+            app:srcCompat="@drawable/likeicon" />
+
+        <com.google.android.material.floatingactionbutton.FloatingActionButton
+            android:id="@+id/trashBtn"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginTop="8dp"
+            android:layout_marginEnd="12dp"
+            android:clickable="true"
+            android:onClick="deleteTweet"
+            app:backgroundTint="#FFFFFF"
+            app:srcCompat="@drawable/trashicon" />
 
     </RelativeLayout>
 </LinearLayout>
