--- a/Front End/app/src/main/res/layout/tweet.xml
+++ b/Front End/app/src/main/res/layout/tweet.xml
@@ -37,7 +37,7 @@
             android:textStyle="bold" />
 
         <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/floatingActionButton"
+            android:id="@+id/likeBtn"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentTop="true"
@@ -45,7 +45,7 @@
             android:layout_marginTop="79dp"
             android:layout_marginEnd="14dp"
             android:clickable="true"
-            android:onClick="addingTweet"
+            android:onClick="likeTweet"
             app:backgroundTint="#FFFFFF"
             app:srcCompat="@drawable/likeicon" />
 
